# pyproject.toml

[build-system]
  requires = ["setuptools>=65.0.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "DunGen"
  dynamic = ["version"]
  authors = [
    { name = "Theodor Blom", email = "me@theodorblom.com" },
  ]
  description = "Generate random DnD 5e dungeons in a handy JSON format."
  readme = "README.md"
  requires-python = ">=3.10"
  classifiers = [
    "Licence :: OSI Approved :: MIT Licence",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
  ]
  dependencies = [
    "tomli; python_version < '3.11'",
  ]

[project.optional-dependencies]
  dev = [
    "pytest",
  ]

[project.urls]
  homepage = "https://github.com/Theeoi/DunGen"

[tool.setuptools.dynamic]
  version = {attr = "dungen.__version__"}
